# adventofcode-hs-2024

./: .gitignore  adventofcode.cabal  fetch.sh  mkday.rb
lib/AdventOfCode/: Search.hs
