cabal-version: 2.2
-- cabal 2.2 for common stanzas

name: adventofcode2024
version: 1.0
build-type: Simple

common flags
  default-language: Haskell2010
  ghc-options:
    -Weverything
    -Wno-all-missed-specialisations
    -Wno-implicit-prelude
    -Wno-missed-specialisations
    -Wno-missing-deriving-strategies
    -- in GHC 9.0.1, enabling -Wmissing-exported-signatures disabled stricter -Wmissing-signatures
    -- this was fixed in GHC 9.2.1, so it's safe to keep this now.
    -- (Not mentioned in release notes, but git tag --contains e1f133bf5ee30f25a94b4f3bf4d26d1a9381f0d9)
    ---Wno-missing-exported-signatures
    -Wno-missing-import-lists
    -Wno-missing-kind-signatures
    -Wno-missing-local-signatures
    -Wno-missing-safe-haskell-mode
    -Wno-monomorphism-restriction
    -Wno-prepositive-qualified-module
    -Wno-safe
    -Wno-unsafe

common bin
  hs-source-dirs: bin

library
  import: flags
  hs-source-dirs:  lib
  exposed-modules: AdventOfCode
  build-depends:   base

library aocsplit
  import: flags
  hs-source-dirs:  lib
  exposed-modules: AdventOfCode.Split
  build-depends:   base

executable 01_historian_hysteria
  import: bin, flags
  build-depends: base, adventofcode2024
  main-is:       01_historian_hysteria.hs

executable 02_red_nosed_reports
  import: bin, flags
  build-depends: base, adventofcode2024
  main-is:       02_red_nosed_reports.hs

executable 03_mull_it_over
  import: bin, flags
  build-depends: base, adventofcode2024, aocsplit
  main-is:       03_mull_it_over.hs

executable 04_ceres_search
  import: bin, flags
  -- !? added in array 0.5.6.0
  build-depends: base, adventofcode2024, array >= 0.5.6.0
  main-is:       04_ceres_search.hs

executable 05_print_queue
  import: bin, flags
  build-depends: base, adventofcode2024, aocsplit, containers
  main-is:       05_print_queue.hs

executable 06_guard_gallivant
  import: bin, flags
  build-depends: base, adventofcode2024, containers
  main-is:       06_guard_gallivant.hs

executable 07_bridge_repair
  import: bin, flags
  build-depends: base, adventofcode2024, aocsplit
  main-is:       07_bridge_repair.hs

executable 08_resonant_collinearity
  import: bin, flags
  build-depends: base, adventofcode2024, containers
  main-is:       08_resonant_collinearity.hs

executable 09_disk_defragmenter
  import: bin, flags
  build-depends: base, adventofcode2024, containers
  main-is:       09_disk_defragmenter.hs

executable 10_hoof_it
  import: bin, flags
  build-depends: base, adventofcode2024, containers
  main-is:       10_hoof_it.hs

executable 11_plutonian_pebbles
  import: bin, flags
  build-depends: base, adventofcode2024, containers
  main-is:       11_plutonian_pebbles.hs
